# Code-Pile

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: dataset-request.md  stat-request.md
.github/workflows/: python_starter.yml  test_working.yml
codepile/: codepile.py  dataset.py
codepile/ai4code_kaggle/: ai4code_kaggle.py  ai4code_test.py  datasheet.md  tests.py  unittests.py
codepile/booksc/: ebookfoundation_github.py  epub_parser.py  scapping.py
codepile/competitive_programming/: competitive_programming.py  cp_test.py  datasheet.md  tests.py  topcoder.py  topcoder_cookies.json  topcoder_headers.json  unittests.py
codepile/discourse/: discourse.py  discourse_processor.py  discourse_spider.py
codepile/enwikibooks/: README.md  books_test.py  datasheet.md  tests.py  unittests.py  wikibooks.py  wikibooks_computing_title.py  wikibooks_preprocess.py  wikiparser.sh
codepile/ghdiffs/: ghdiffs_repo_filter.py  ghdiffs_scrape.py  test_file.json
codepile/ghtorrent/: datasheet.md
codepile/github_issues/: README.md
codepile/leetcode/: leetcode.py  processor.py
codepile/stackexchange/: .gitignore  README.md  __init__.py  datasheet.md  processor.py  se_processing.py  stackexchange.py  test.py  types_meta.py
codepile/tests/: test_test.py
codepile/tools/: filtering.py
codepile/tutorialspoint/: tutorialspoint.py  (+1 more)
ghtorrent/: get_github_repo.py  gh_download.py
pilev2/: pilev2.py  pilev2_deduplication.py  test_pile_v2.py  test_pilev2.py
stats/: README.md  requirements.txt
tests/: test_leetcode.py  test_test.py
(+73 files in other folders)
