[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "Code-Pile"
description = "The Code-Pile dataset is a multi category text dataset about code and Software Development"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "gdown",
    "pydantic",
    "internetarchive",
    "py7zr",
    "more_itertools",
    "pandas",
    "pyarrow",
    "lxml",
    "pyspark",
    "spacy",
    "spacy_fastlang",
    "en_core_web_sm"
]

[tool.pytest.ini_options]
markers = [
    "s3_download: marks tests as downloading from s3, so they need credentials",
]
[tool.setuptools]
py-modules = ["codepile","stats"]
